@@ -5,6 +5,7 @@
 2014-03-17 3.0
 - massive rewriting of the plugins structure and modules
 - repair malformed data returned by Net::SNMP
+- add interface-nat-rejects and interface-nat-session-count for IOS
 
 2014-02-07 2.6.5.2
 - add another cisco unified communication model
